Switch reflective instantiation to use constructor (Java 13 deprecation warning)